--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,27 @@
-spring.application.name=comments
+server.port=8081
+spring.application.name=user-service
+
+spring.kafka.bootstrap-servers=kafka:19092
+kafka.partition.count=2
+
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
+
+logging.level.org.springframework.orm.jpa=INFO
+logging.level.org.springframework.transaction=INFO
+logging.level.org.springframework.transaction.interceptor=TRACE
+logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
+
+#---
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:6542/comment-service
+spring.datasource.username=test
+spring.datasource.password=test
+#---
+
+spring.config.activate.on-profile=ci,test
+spring.sql.init.mode=always
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:news
+spring.datasource.username=test
+spring.datasource.password=test
