--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ kafka.partition.count=2
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
 
+spring.web.resources.add-mappings=false
+
 logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
