--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.application.name=user-service
 spring.kafka.bootstrap-servers=kafka:19092
 kafka.partition.count=2
 
-spring.sql.init.mode=always
-spring.sql.init.schema-locations=classpath:schema.sql
+spring.liquibase.change-log=db.changelog/master.yaml
+spring.liquibase.enabled=true
 
 spring.web.resources.add-mappings=false
 
